--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <div id="ima">
+        <audio src="./m.mp3" autoplay="autoplay">
         <img src="./1.jpg" alt="">
     </div>
 </body>
