--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
 </head>
 <body>
     <div id="ima">
-        <audio src="./m.mp3" autoplay="autoplay">
-        <img src="./1.jpg" alt="">
+         <img src="./1.jpg" alt="">
+        
     </div>
+    <audio src="./m.mp3" autoplay="autoplay"></audio>
 </body>
 </html>
